--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         </select>
         <input name="second-num" id="second-num" />
         <button id="calculate">Calculate</button>
-        <br />
-        <output></output>
+        <br/>
+        <!-- <output></output> -->
       </fieldset>
     </form>
 
@@ -87,22 +87,8 @@
     </section>
   </main>
 
-  <script>
-    let form = document.querySelector('form');
-    form.addEventListener('submit', e => {
-      e.preventDefault();
-      let output = document.querySelector('output');
-      let firstNum = document.querySelector('#first-num').value;
-      let secondNum = document.querySelector('#second-num').value;
-      let operator = document.querySelector('#operator').value;
-      output.innerHTML = eval(`${firstNum} ${operator} ${secondNum}`);
-    });
-
-    let errorBtns = Array.from(document.querySelectorAll('#error-btns > button'));
-
-    // Start your code here
-    // You may move this JS to another file if you wish
-  </script>
+  <script src="https://cdn.trackjs.com/agent/v3/latest/t.js"></script>                        
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
